Set up test cases for log generation

--- a/ReliableControls/ReliableControls.vcxproj
+++ b/ReliableControls/ReliableControls.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="catch.hpp" />
+    <ClInclude Include="Helpers.h" />
     <ClInclude Include="IEventCounter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
