--- a/ReliableControls/ReliableControls.vcxproj.filters
+++ b/ReliableControls/ReliableControls.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="IEventCounter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
