--- a/ReliableControls/ReliableControls.vcxproj
+++ b/ReliableControls/ReliableControls.vcxproj
@@ -144,11 +144,13 @@
   <ItemGroup>
     <ClCompile Include="IEventCounter.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TimeStamp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="catch.hpp" />
-    <ClInclude Include="Helpers.h" />
     <ClInclude Include="IEventCounter.h" />
+    <ClInclude Include="Includes.h" />
+    <ClInclude Include="TimeStamp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
